--- a/templates/gitlab/0/docker-compose.yml
+++ b/templates/gitlab/0/docker-compose.yml
@@ -27,7 +27,7 @@ gitlab-data:
   entrypoint:
   - /bin/true
   hostname: gitdata
-  image: gitlab/gitlab-ce:latest
+  image: gitlab/gitlab-ce:9.2.2-ce.0
   volumes:
   - ${etc_gitlab}:/etc/gitlab
   - ${log_gitlab}:/var/log/gitlab
