--- a/templates/gitlab/config.yml
+++ b/templates/gitlab/config.yml
@@ -1,4 +1,4 @@
-name: Gitlab Community
+name: Gitlab Community Edition
 description: |
   Gitlab CE is a free GitHub alternative (with host volumes)
 version: latest
