--- a/templates/gogs/config.yml
+++ b/templates/gogs/config.yml
@@ -1,5 +1,5 @@
 name: Gogs With Local Volumes
 description: |
     A painless self-hosted Git service
-version: v0.8.43
+version: latest
 category: Git
