--- a/templates/gogs/0/docker-compose.yml
+++ b/templates/gogs/0/docker-compose.yml
@@ -1,7 +1,9 @@
 gogs:
-    image: gogs/gogs:latest
+    image: gogs/gogs:v0.11.4
     volumes_from:
       - gogs-data
+    environment:
+      RUN_CROND: '1'
     volumes:
       - /etc/localtime:/etc/localtime
     ports:
@@ -40,7 +42,7 @@ database-volume:
     labels:
       io.rancher.container.start_once: 'true'
       io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
-      
+
 gogs-data:
     image: rawmind/alpine-volume:0.0.2-1
     environment:
