--- a/templates/gogs/99/rancher-compose.yml
+++ b/templates/gogs/99/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: "Gogs"
-  version: "0.11.4"
+  version: "latest"
   description: "A painless self-hosted Git service"
   uuid: gogs-0
   minimum_rancher_version: v0.51.0
