--- a/templates/gitlab/config.yml
+++ b/templates/gitlab/config.yml
@@ -1,5 +1,5 @@
 name: Gitlab Community Edition
 description: |
   Gitlab CE is a free GitHub alternative (with host volumes)
-version: latest
+version: 9.2.5-ce.0
 category: Versioning
