--- a/templates/gitlab/1/rancher-compose.yml
+++ b/templates/gitlab/1/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: Gitlab Community
-  version: "latest"
+  version: "9.2.4-ce.0"
   description: |
     Gitlab CE is a free GitHub alternative (with host volumes)
   minimum_rancher_version: v0.56.0
