--- a/templates/nginx/0/docker-compose.yml
+++ b/templates/nginx/0/docker-compose.yml
@@ -1,6 +1,6 @@
 nginx:
   image: nginx:stable-alpine
-  volume:
+  volumes:
    -  ${nginx_conf_path}:/etc/nginx/nginx.conf
   volumes_from:
    - nginx-ssl-certs
