--- a/templates/nginx/0/docker-compose.yml
+++ b/templates/nginx/0/docker-compose.yml
@@ -12,9 +12,11 @@ web:
     io.rancher.container.pull_image: always
     io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     io.rancher.container.hostname_override: container_name
+    io.rancher.sidekicks: ssl-certs, nginx-config
 
 ssl-certs:
     image: rawmind/alpine-volume:0.0.2-1
+    network_mode: none
     environment:
       SERVICE_GID: '0'
       SERVICE_UID: '0'
@@ -28,6 +30,7 @@ ssl-certs:
 
 nginx-config:
     image: rawmind/alpine-volume:0.0.2-1
+    network_mode: none
     environment:
       SERVICE_GID: '0'
       SERVICE_UID: '0'
