--- a/templates/nginx/0/docker-compose.yml
+++ b/templates/nginx/0/docker-compose.yml
@@ -11,7 +11,7 @@ web:
   labels:
     io.rancher.container.pull_image: always
     io.rancher.container.hostname_override: container_name
-    io.rancher.sidekicks: ssl-certs, nginx-config
+    io.rancher.sidekicks: ssl-certs
 
 ssl-certs:
   image: rawmind/alpine-volume:0.0.2-1
@@ -21,16 +21,5 @@ ssl-certs:
     SERVICE_VOLUME: /ssl
   volumes:
   - ${certs_path}:/ssl:ro
-  labels:
-    io.rancher.container.start_once: 'true'
-
-nginx-config:
-  image: rawmind/alpine-volume:0.0.2-1
-  environment:
-    SERVICE_GID: '0'
-    SERVICE_UID: '0'
-    SERVICE_VOLUME: /etc/nginx/conf.d
-  volumes:
-  - ${nginx_confd_path}:/etc/nginx/conf.d:ro
   labels:
     io.rancher.container.start_once: 'true'
