--- a/templates/nginx/0/docker-compose.yml
+++ b/templates/nginx/0/docker-compose.yml
@@ -1,24 +1,40 @@
 web:
   image: nginx:stable-alpine
   volumes:
-  - ${nginx_conf_path}:/etc/nginx/nginx.conf:ro
+   -  ${nginx_conf_path}:/etc/nginx/nginx.conf:ro
   volumes_from:
-  - ssl-certs
+   - ssl-certs
+   - nginx-config
   ports:
-  - "80:80"
-  - "443:443"
+   - "80:80"
+   - "443:443"
   labels:
     io.rancher.container.pull_image: always
     io.rancher.container.hostname_override: container_name
-    io.rancher.sidekicks: ssl-certs
+    io.rancher.sidekicks: ssl-certs, nginx-config
 
 ssl-certs:
-  image: rawmind/alpine-volume:0.0.2-1
-  environment:
-    SERVICE_GID: '0'
-    SERVICE_UID: '0'
-    SERVICE_VOLUME: /ssl
-  volumes:
-  - ${certs_path}:/ssl:ro
-  labels:
-    io.rancher.container.start_once: 'true'
+    image: rawmind/alpine-volume:0.0.2-1
+    environment:
+      SERVICE_GID: '0'
+      SERVICE_UID: '0'
+      SERVICE_VOLUME: /ssl
+    volumes:
+      - ${certs_path}:/ssl:ro
+    labels:
+      io.rancher.container.start_once: 'true'
+      io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
+      io.rancher.container.hostname_override: container_name
+
+nginx-config:
+    image: rawmind/alpine-volume:0.0.2-1
+    environment:
+      SERVICE_GID: '0'
+      SERVICE_UID: '0'
+      SERVICE_VOLUME: /etc/nginx/conf.d
+    volumes:
+      - ${nginx_confd_path}:/etc/nginx/conf.d:ro
+    labels:
+      io.rancher.container.start_once: 'true'
+      io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
+      io.rancher.container.hostname_override: container_name
