--- a/templates/nginx/0/docker-compose.yml
+++ b/templates/nginx/0/docker-compose.yml
@@ -3,17 +3,16 @@ web:
   volumes:
    -  ${nginx_conf_path}:/etc/nginx/nginx.conf:ro
   volumes_from:
-   - ssl-certs:ro
-   - nginx-config:ro
+   - ssl_certs:ro
+   - nginx_config:ro
   ports:
    - "${http_ip}:${http_port}:80"
    - "${http_ip}:${https_port}:443"
   labels:
     io.rancher.container.pull_image: always
-    io.rancher.container.hostname_override: container_name
     io.rancher.sidekicks: ssl-certs, nginx-config
 
-ssl-certs:
+ssl_certs:
     image: rawmind/alpine-volume:0.0.2-1
     environment:
       SERVICE_GID: '0'
@@ -22,11 +21,11 @@ ssl-certs:
     volumes:
       - ${certs_path}:/ssl:ro
     labels:
+      io.rancher.container.pull_image: always
       io.rancher.container.start_once: 'true'
       io.rancher.scheduler.affinity:container_label: io.rancher.stack_service.name=$${stack_name}/$${service_name}
-      io.rancher.container.hostname_override: container_name
 
-nginx-config:
+nginx_config:
     image: rawmind/alpine-volume:0.0.2-1
     environment:
       SERVICE_GID: '0'
@@ -35,6 +34,6 @@ nginx-config:
     volumes:
       - ${nginx_confd_path}:/etc/nginx/conf.d:ro
     labels:
+      io.rancher.container.pull_image: always
       io.rancher.container.start_once: 'true'
       io.rancher.scheduler.affinity:container_label: io.rancher.stack_service.name=$${stack_name}/$${service_name}
-      io.rancher.container.hostname_override: container_name
