--- a/templates/nginx/0/rancher-compose.yml
+++ b/templates/nginx/0/rancher-compose.yml
@@ -43,14 +43,21 @@
       type: "string"
 
 services:
-  web:
+  nginx-proxy:
     scale: 1
-    start_on_create: true
     health_check:
+      # Which port to perform the check against
       port: 80
-      interval: 2000
-      unhealthy_threshold: 8
-      strategy: recreate
+      # For TCP, request_line needs to be '' or not shown
+      # TCP Example:
+      # request_line: ''
       request_line: GET / HTTP/1.0
+      # Interval is measured in milliseconds
+      interval: 2000
+      initializing_timeout: 60000
+      unhealthy_threshold: 3
+      # Strategy for what to do when unhealthy
+      strategy: recreate
       healthy_threshold: 2
+      # Response timeout is measured in milliseconds
       response_timeout: 2000
