--- a/templates/mysql/config.yml
+++ b/templates/mysql/config.yml
@@ -1,5 +1,5 @@
-name: Gogs
+name: mysql
 description: |
-    A painless self-hosted Git service (with Host Volumes)
+    MySQL Server
 version: 0.11.4
 category: Git
