Change to my fork on mysql-backup
to be able to backup rancher external db

--- a/templates/rancherdb-backup/0/docker-compose.yml
+++ b/templates/rancherdb-backup/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   rancherdb-backup:
-    image: deitch/mysql-backup
+    image: teknologist/mysql-backup
     hostname: rancherdb-backup
     volumes:
     - ${DB_DUMP_TARGET}:/db
