--- a/templates/rancherdb-backup/0/docker-compose.yml
+++ b/templates/rancherdb-backup/0/docker-compose.yml
@@ -6,12 +6,14 @@ services:
     volumes:
     - ${DB_DUMP_TARGET}:/db
     environment:
-      DB_SERVER: '${DB_SERVER}'
-      DB_NAMES: '${DB_NAMES}'
-      DB_USER: '${CATTLEDB_USER}'
+      DB_SERVER: ${DB_SERVER}
+      DB_NAMES: ${DB_NAMES}
+      DB_USER: ${CATTLEDB_USER}
       DB_PASS: ${CATTLEDB_USER_PASSWORD}
       DB_DUMP_FREQ: ${DB_DUMP_FREQ}
+      DB_DUMP_BEGIN: ${DB_DUMP_BEGIN}
       DB_DUMP_TARGET: ${DB_DUMP_TARGET}
+      DB_DUMP_DEBUG: ${DB_DUMP_DEBUG}
     stdin_open: true
     tty: true
     labels:
