--- a/templates/mongo-cluster/0/rancher-compose.yml
+++ b/templates/mongo-cluster/0/rancher-compose.yml
@@ -31,3 +31,22 @@ mongo-cluster:
     mongo:
       yml:
         replset.name: "${replset_name}"
+mongo-proxy:
+  scale: 1
+  start_on_create: true
+  lb_config:
+    certs: []
+    port_rules:
+    - priority: 1
+      protocol: tcp
+      service: mongo-cluster
+      source_port: 27017
+      target_port: 27017
+  health_check:
+    response_timeout: 2000
+    healthy_threshold: 2
+    port: 42
+    unhealthy_threshold: 3
+    initializing_timeout: 60000
+    interval: 2000
+    reinitializing_timeout: 60000
