--- a/templates/mongo-cluster/1/docker-compose.yml
+++ b/templates/mongo-cluster/1/docker-compose.yml
@@ -19,7 +19,6 @@ services:
       - mongo-base
   mongo-base:
     restart: always
-    net: none
     labels:
       io.rancher.scheduler.affinity:host_label: ${host_label}
       io.rancher.container.hostname_override: container_name
@@ -28,7 +27,6 @@ services:
     stdin_open: true
     entrypoint: /bin/true
   mongo-datavolume:
-    net: none
     labels:
       io.rancher.scheduler.affinity:host_label: ${host_label}
       io.rancher.container.hostname_override: container_name
@@ -36,6 +34,7 @@ services:
     volumes:
       - mongonfs:/data/db
     entrypoint: /bin/true
+    stdin_open: true
     image: busybox
 volumes:
   mongonfs:
