Fixed volume name

--- a/templates/mongo-cluster/1/rancher-compose.yml
+++ b/templates/mongo-cluster/1/rancher-compose.yml
@@ -24,6 +24,14 @@
       type: "string"
       required: false
       default: ""
+    - variable: volume_name
+      label: "Volume name for mongo data"
+      description: |
+        Volume name for mongo data
+        Example: 'mongo-nfs'
+      required: false
+      type: "string"
+      default: "mongo-nfs"
 mongo-cluster:
   scale: 3
   retain_ip: true
