--- a/templates/mongo-cluster/1/docker-compose.yml
+++ b/templates/mongo-cluster/1/docker-compose.yml
@@ -32,11 +32,11 @@ services:
       io.rancher.container.hostname_override: container_name
       io.rancher.container.start_once: true
     volumes:
-      - mongonfs:/data/db
+      - ${volume_name}:/data/db
     entrypoint: /bin/true
     stdin_open: true
     image: busybox
 volumes:
-  mongonfs:
+  ${volume_name}:
     driver: rancher-nfs
     external: true
