adjustments to gitlab private

--- a/templates/gitlab-private/0/docker-compose.yml
+++ b/templates/gitlab-private/0/docker-compose.yml
@@ -1,9 +1,8 @@
 gitlab-server:
   ports:
-  - 22:22/tcp
-  - ${ssh_port}:22/tcp
+  - 172.17.0.1:22:22/tcp
+  - 172.17.0.1:${ssh_port}:22/tcp
   - 127.0.0.1:${http_port}:80/tcp
-  - 127.0.0.1:${https_port}:443/tcp
   labels:
     io.rancher.sidekicks: gitlab-data
   hostname: ${gitlab_hostname}
