--- a/templates/gitlab-private/0/rancher-compose.yml
+++ b/templates/gitlab-private/0/rancher-compose.yml
@@ -29,11 +29,11 @@
       required: true
       default: "127.0.0.1"
       type: "string"
-    - variable: "http_port"
-      description: "HTTP port to expose on host. Will be used to bind TCP"
-      label: "HTTP port:"
+    - variable: "https_port"
+      description: "HTTPS port to expose on host. Will be used to bind TCP"
+      label: "HTTPS port:"
       required: true
-      default: 80
+      default: 8443
       type: "string"
     - variable: "gitlab_dir"
       description: "Base directory on host for gitlab data"
