--- a/templates/gitlab-private/0/docker-compose.yml
+++ b/templates/gitlab-private/0/docker-compose.yml
@@ -1,37 +1,39 @@
-gitlab-server:
-  ports:
-  - 22:22/tcp
-  - ${https_port}:443/tcp
-  labels:
-    io.rancher.sidekicks: gitlab-data
-  hostname: ${gitlab_hostname}
-  image: gitlab/gitlab-ce:9.5.3-ce.0
-  volumes_from:
-  - gitlab-data
-  ulimits:
-    nproc: 131072
-    core: 0
-    sigpending: 62793
-    nofile:
-      soft: 60000
-      hard: 60000
-  sysctls:
-    net.core.somaxconn: '1024'
-  environment:
-    GITLAB_OMNIBUS_CONFIG: |
-      external_url '${gitlab_omnipus_prefix}${gitlab_hostname}'
-    GITLAB_FILEMAX: 1000000,
-    TZ: "UTC"
-gitlab-data:
-  labels:
-    io.rancher.container.start_once: 'true'
-  entrypoint:
-  - /bin/true
-  hostname: gitdata
-  image: gitlab/gitlab-ce:9.5.3-ce.0
-  volumes:
-  - ${gitlab_dir}/etc:/etc/gitlab
-  - ${gitlab_dir}/log:/var/log/gitlab
-  - ${gitlab_dir}/opt:/var/opt/gitlab
-  - ${gitlab_dir}/backups:/var/opt/gitlab/backups
-  - ${gitlab_dir}/secret-backups:/secret/gitlab/backups
+version: '2'
+services:
+  gitlab-server:
+    ports:
+    - 22:22/tcp
+    - ${host_ip}:${http_port}:80/tcp
+    labels:
+      io.rancher.sidekicks: gitlab-data
+    hostname: ${gitlab_hostname}
+    image: gitlab/gitlab-ce:9.5.3-ce.0
+    volumes_from:
+    - gitlab-data
+    ulimits:
+      nproc: 131072
+      core: 0
+      sigpending: 62793
+      nofile:
+        soft: 60000
+        hard: 60000
+    sysctls:
+      net.core.somaxconn: '1024'
+    environment:
+      GITLAB_OMNIBUS_CONFIG: |
+        external_url '${gitlab_omnipus_prefix}${gitlab_hostname}'
+      GITLAB_FILEMAX: 1000000,
+      TZ: "UTC"
+  gitlab-data:
+    labels:
+      io.rancher.container.start_once: 'true'
+    entrypoint:
+    - /bin/true
+    hostname: gitdata
+    image: gitlab/gitlab-ce:9.5.3-ce.0
+    volumes:
+    - ${gitlab_dir}/etc:/etc/gitlab
+    - ${gitlab_dir}/log:/var/log/gitlab
+    - ${gitlab_dir}/opt:/var/opt/gitlab
+    - ${gitlab_dir}/backups:/var/opt/gitlab/backups
+    - ${gitlab_dir}/secret-backups:/secret/gitlab/backups
