--- a/templates/gitlab-private/1/rancher-compose.yml
+++ b/templates/gitlab-private/1/rancher-compose.yml
@@ -62,3 +62,23 @@ gitlab-server:
 gitlab-data:
   scale: 1
   retain_ip: true
+
+ssh-proxy:
+    scale: 1
+    start_on_create: true
+    lb_config:
+      certs: []
+      port_rules:
+      - priority: 1
+        protocol: tcp
+        service: gitlab-server
+        source_port: 22
+        target_port: 22
+    health_check:
+      response_timeout: 2000
+      healthy_threshold: 2
+      port: 42
+      unhealthy_threshold: 3
+      initializing_timeout: 60000
+      interval: 2000
+      reinitializing_timeout: 60000
