--- a/templates/gitlab-private/1/docker-compose.yml
+++ b/templates/gitlab-private/1/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   gitlab-server:
     ports:
-    - ${host_ip}:22:22/tcp
+    - 2222:22/tcp
     - ${host_ip}:${https_port}:443/tcp
     labels:
       io.rancher.sidekicks: gitlab-data
@@ -37,10 +37,3 @@ services:
     - ${gitlab_dir}/opt:/var/opt/gitlab
     - ${gitlab_dir}/backups:/var/opt/gitlab/backups
     - ${gitlab_dir}/secret-backups:/secret/gitlab/backups
-  ssh-proxy:
-    image: rancher/lb-service-haproxy:v0.7.9
-    ports:
-    - ${ssh_ip}:22:22/tcp
-    labels:
-      io.rancher.container.agent.role: environmentAdmin
-      io.rancher.container.create_agent: 'true'
