--- a/templates/mongo-cluster/3/docker-compose.yml
+++ b/templates/mongo-cluster/3/docker-compose.yml
@@ -37,6 +37,10 @@ services:
         io.rancher.scheduler.affinity:host_label: ${host_label}
         io.rancher.container.hostname_override: container_name
         io.rancher.container.start_once: true
+     environment:
+          - SERVICE_UID=1000
+          - SERVICE_GID=1000
+          - SERVICE_VOLUME=/data/db  
       volumes:
         - es-storage-volume:/data/db
       entrypoint: /bin/true
