--- a/templates/gitlab/31/rancher-compose.yml
+++ b/templates/gitlab/31/rancher-compose.yml
@@ -79,11 +79,11 @@ gitlab-server:
   health_check:
     port: 80
     interval: 30000
-    unhealthy_threshold: 3
+    unhealthy_threshold: 5
     strategy: recreate
     response_timeout: 2000
     healthy_threshold: 2
 
 gitlab-data:
   scale: 1
-  retain_ip: true
+  retain_ip: false
